--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "tsc || true",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
