--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
 
   "scripts": {
-    "dev": "tsx watch server/index.ts",
-    "build": "tsc || true",
+    "dev": "tsx server/index.ts",
+    "build": "tsc",
     "start": "node --import tsx server/index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
@@ -15,13 +15,31 @@
   "dependencies": {
     "express": "^5.0.1",
     "express-session": "^1.19.0",
+    "connect-pg-simple": "^10.0.0",
+
     "pg": "^8.16.3",
+    "drizzle-orm": "^0.39.3",
+    "drizzle-zod": "^0.7.1",
+
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "openid-client": "^6.8.2",
+
     "openai": "^6.22.0",
-    "zod": "^3.25.76"
+
+    "ws": "^8.18.0",
+    "zod": "^3.25.76",
+
+    "tsx": "^4.20.5"
   },
 
   "devDependencies": {
-    "tsx": "^4.20.5",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "@types/node": "20.19.27",
+    "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.2",
+    "@types/passport": "^1.0.17",
+    "@types/passport-local": "^1.0.38",
+    "drizzle-kit": "^0.31.8"
   }
 }
