--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,35 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["DOM", "DOM.Iterable", "ES2022"],
+    "lib": ["ES2022", "DOM"],
     "module": "ESNext",
     "moduleResolution": "Bundler",
 
     "jsx": "react-jsx",
 
     "allowJs": true,
-    "skipLibCheck": true,
-    "strict": false,
-
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "esModuleInterop": true,
 
-    "types": ["node", "vite/client"],
+    "strict": false,
+    "skipLibCheck": true,
+
+    "forceConsistentCasingInFileNames": true,
 
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["client/src/*"],
-      "@shared/*": ["shared/*"]
-    },
 
-    "noEmit": true
+    "types": ["node"],
+
+    "paths": {
+      "@/*": ["./client/src/*"],
+      "@shared/*": ["./shared/*"]
+    }
   },
 
   "include": [
-    "client",
     "server",
-    "shared"
+    "shared",
+    "client/src"
   ],
 
   "exclude": [
