--- a/package.json
+++ b/package.json
@@ -1,45 +1,27 @@
 {
-  "name": "rest-express",
+  "name": "client",
+  "private": true,
   "version": "1.0.0",
   "type": "module",
-  "license": "MIT",
-
   "scripts": {
-    "dev": "tsx server/index.ts",
-    "build": "tsc",
-    "start": "node --import tsx server/index.ts",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "build": "vite build",
+    "dev": "vite"
   },
-
   "dependencies": {
-    "express": "^5.0.1",
-    "express-session": "^1.19.0",
-    "connect-pg-simple": "^10.0.0",
-
-    "pg": "^8.16.3",
-    "drizzle-orm": "^0.39.3",
-    "drizzle-zod": "^0.7.1",
-
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "openid-client": "^6.8.2",
-
-    "openai": "^6.22.0",
-
-    "ws": "^8.18.0",
-    "zod": "^3.25.76",
-
-    "tsx": "^4.20.5"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "wouter": "^3.3.5",
+    "@tanstack/react-query": "^5.60.5",
+    "lucide-react": "^0.453.0",
+    "framer-motion": "^11.18.2",
+    "date-fns": "^3.6.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.6.1",
+    "recharts": "^2.15.4"
   },
-
   "devDependencies": {
-    "typescript": "5.6.3",
-    "@types/node": "20.19.27",
-    "@types/express": "^5.0.0",
-    "@types/express-session": "^1.18.2",
-    "@types/passport": "^1.0.17",
-    "@types/passport-local": "^1.0.38",
-    "drizzle-kit": "^0.31.8"
+    "vite": "^7.3.0",
+    "@vitejs/plugin-react": "^4.7.0",
+    "typescript": "^5.6.3"
   }
 }
