--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "lib": ["ES2022", "DOM"],
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-
+    "target": "ESNext",
+    "lib": ["DOM", "ESNext"],
     "jsx": "react-jsx",
-
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "strict": false,
     "skipLibCheck": true,
-
-    "forceConsistentCasingInFileNames": true,
-
-    "baseUrl": ".",
-
-    "types": ["node"],
-
-    "paths": {
-      "@/*": ["./client/src/*"],
-      "@shared/*": ["./shared/*"]
-    }
+    "types": ["vite/client"]
   },
-
-  "include": [
-    "server",
-    "shared",
-    "client/src"
-  ],
-
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src"]
 }
