--- a/package.json
+++ b/package.json
@@ -1,27 +1,13 @@
 {
-  "name": "client",
-  "private": true,
+  "name": "rest-express",
   "version": "1.0.0",
   "type": "module",
+
   "scripts": {
-    "build": "vite build",
-    "dev": "vite"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "wouter": "^3.3.5",
-    "@tanstack/react-query": "^5.60.5",
-    "lucide-react": "^0.453.0",
-    "framer-motion": "^11.18.2",
-    "date-fns": "^3.6.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.6.1",
-    "recharts": "^2.15.4"
-  },
-  "devDependencies": {
-    "vite": "^7.3.0",
-    "@vitejs/plugin-react": "^4.7.0",
-    "typescript": "^5.6.3"
+    "dev": "NODE_ENV=development tsx server/index.ts",
+    "build": "tsc || true",
+    "start": "node --import tsx server/index.ts",
+    "check": "tsc",
+    "db:push": "drizzle-kit push"
   }
 }
