--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-  "name": "rest-express",
+  "name": "hockey-coach-ai",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
 
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "tsc || true",
+    "build": "cd client && npm install && npm run build",
     "start": "node --import tsx server/index.ts",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "dev": "tsx watch server/index.ts"
+  },
+
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "openai": "^4.56.0",
+    "tsx": "^4.19.0"
+  },
+
+  "engines": {
+    "node": ">=22"
   }
 }
